# ModernPlayer

./: .gitignore  CMakeLists.txt  CommonDef.h  FFmpegWrapper.h  MainWindow.cpp  MainWindow.h  OpenglPlayWidget.cpp  OpenglPlayWidget.h  PlayerController.cpp  PlayerController.h  PlayerWidget.cpp  PlayerWidget.h  README.md  SoundTouchTest.h  main.cpp  qrc.qrc
res/: qss.qss
